# Code_review_openenv_by_shahid

./: .gitignore  Dockerfile  README.md  app.py  baseline_scores.json  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
